<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="option_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="option_load_app">LoadApp - Current repository by Udacity</string>
    <string name="option_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="option_none">Please select the file to download</string>


    <string name="download">Download</string>
    <string name="loading">We are loading</string>

    <string name="button_ok">OK</string>

    <string name="label_file_name">File name:</string>
    <string name="label_status">Status:</string>

    <string name="status_none">None</string>
    <string name="status_failed">FAILED</string>
    <string name="status_paused">PAUSED</string>
    <string name="status_pending">PENDING</string>
    <string name="status_running">RUNNING</string>
    <string name="status_successful">SUCCESSFUL</string>
</resources>
